--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,9 +34,8 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity
-            android:name="br.com.ca.asap.activity.SignInActivity"
-            android:label="@string/app_name" >
+        <activity android:theme="@style/AppTheme.NoActionBar"
+            android:name="br.com.ca.asap.activity.SignInActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
