--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,19 +27,20 @@
         <activity
             android:name="br.com.ca.asap.activity.SynchronizeInitiativesActivity"
             android:label="@string/app_name"
-            android:noHistory="true">
+            android:noHistory="true" >
         </activity>
 
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:theme="@style/AppTheme.NoActionBar"
+        <activity
             android:name="br.com.ca.asap.activity.SignInActivity"
-            android:noHistory="true">
-
+            android:noHistory="true"
+            android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -74,6 +75,11 @@
         <activity
             android:name="br.com.ca.asap.activity.DeliverableUpdateActivity"
             android:label="@string/title_activity_deliverable_update"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity
+            android:name="br.com.ca.asap.activity.ShowInfoActivity"
+            android:label="@string/title_activity_show_info"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
     </application>
