--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,25 +22,24 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="br.com.ca.asap.activity.InitiativesActivity"
-            android:label="@string/initiativesActivityLabel" >
+            android:label="@string/initiativesActivityLabel"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="br.com.ca.asap.activity.SynchronizeInitiativesActivity"
             android:label="@string/app_name"
-            android:noHistory="true" >
+            android:noHistory="true"
+            android:screenOrientation="portrait">
         </activity>
-
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
         <activity
             android:name="br.com.ca.asap.activity.SignInActivity"
-            android:noHistory="true"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -55,33 +54,58 @@
         <activity
             android:name="br.com.ca.asap.activity.SendMessageActivity"
             android:label="@string/title_activity_send_message"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="br.com.ca.asap.activity.ShowMessagesActivity"
             android:label="@string/title_activity_show_messages"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="br.com.ca.asap.activity.ShowPrioritizedDeliverablesActivity"
             android:label="@string/title_activity_show_day_priorities"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="br.com.ca.asap.activity.SignUpActivity"
             android:label="@string/title_activity_sign_up"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="br.com.ca.asap.activity.DeliverableUpdateActivity"
             android:label="@string/title_activity_deliverable_update"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="br.com.ca.asap.activity.ShowInfoActivity"
             android:label="@string/title_activity_show_info"
+            android:noHistory="true"
             android:theme="@style/AppTheme.NoActionBar"
-            android:noHistory="true">
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name="br.com.ca.asap.activity.WelcomeScreenActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_welcome_screen"
+            android:theme="@style/FullscreenTheme"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name="br.com.ca.asap.activity.CreateInitiativeActivity"
+            android:label="@string/title_activity_create_initiative"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name="br.com.ca.asap.activity.CreateDeliverablesActivity"
+            android:label="@string/title_activity_create_deliverables"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
