--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,8 +28,8 @@
         <activity
             android:name="br.com.ca.asap.activity.SynchronizeInitiativesActivity"
             android:label="@string/app_name"
-            android:noHistory="true"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:noHistory="true">
         </activity>
         <meta-data
             android:name="com.google.android.gms.version"
@@ -37,7 +37,8 @@
         <activity
             android:name="br.com.ca.asap.activity.SignInActivity"
             android:theme="@style/AppTheme.NoActionBar"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -73,7 +74,8 @@
             android:name="br.com.ca.asap.activity.SignUpActivity"
             android:label="@string/title_activity_sign_up"
             android:theme="@style/AppTheme.NoActionBar"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:noHistory="true">
         </activity>
         <activity
             android:name="br.com.ca.asap.activity.DeliverableUpdateActivity"
