--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
         </activity>
         <activity
             android:name="br.com.ca.asap.activity.DeliverablesActivity"
+            android:theme="@style/AppTheme.NoActionBar"
             android:label="@string/deliverablesActivityLabel" >
         </activity>
         <activity
