--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,7 +79,7 @@
             android:noHistory="true">
         </activity>
         <activity
-            android:name="br.com.ca.blueocean.activity.DeliverableUpdateActivity"
+            android:name="br.com.ca.blueocean.activity.DeliverableDetailsActivity"
             android:label="@string/title_activity_deliverable_update"
             android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait">
@@ -94,7 +94,7 @@
         <activity
             android:name="br.com.ca.blueocean.activity.WelcomeScreenActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_welcome_screen"
+            android:label="@string/app_name"
             android:theme="@style/FullscreenTheme"
             android:screenOrientation="portrait"
             android:noHistory="true">
