--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -96,6 +96,7 @@
             android:name="br.com.ca.blueocean.activity.CreateInitiativeActivity"
             android:label="@string/title_activity_create_initiative"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name="br.com.ca.blueocean.activity.CreateDeliverableActivity"
@@ -109,6 +110,16 @@
         <activity
             android:name="br.com.ca.blueocean.activity.ShowDeliverablesActivity"
             android:label="@string/title_activity_show_deliverables"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name="br.com.ca.blueocean.activity.ShowInitiativeUsersActivity"
+            android:windowSoftInputMode="adjustResize"
+            android:label="@string/title_activity_edit_user_group"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name="br.com.ca.blueocean.activity.AddInitiativeUserActivity"
+            android:windowSoftInputMode="adjustResize"
+            android:label="@string/title_activity_add_initiative_user"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
